plugins {
    id 'java-library'
    id 'signing'
    id 'maven-publish'
}

group 'one.cafebabe'
version '2021.5'

repositories {
    mavenCentral()
}

java {
    withJavadocJar()
    withSourcesJar()
}

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
    options.compilerArgs += ['--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
                             '--add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED']
}

compileTestJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
    options.compilerArgs += ['--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
                             '--add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED']
}

dependencies {
    implementation project(':samurai-core')
    implementation 'org.thymeleaf:thymeleaf:3.0.12.RELEASE'
    implementation 'com.intellij:annotations:12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
